# esp32_max77658_PMIC

./: .cproject  .project  CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  main.c
main/bsp/: bsp.c  bsp.h  bsp_mem.c  bsp_mutex.c  i2c_bus.c
main/component/pmic/: max77658.c  max77658.h  max77658_apps.c  max77658_apps.h  max77658_defines.h  max77658_fg.c  max77658_fg.h  max77658_fg_types.h  max77658_pm.c  max77658_pm.h  max77658_pm_types.h  max77658_reg.c  max77658_reg.h  max77658_types.h
main/component/pmic/docs/: register_map.txt  simo-calculator-dcm-v2.xlsx
main/task/: pmic_task.c  pmic_task.h
